recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:15: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3));
                            ^Koch:17: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3));
                            ^Koch:19: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3));
                            ^Koch:21: error: value ceiling is not a member of object Math
    snowSide(levels-1, Math.ceiling(length/3));
                            ^